--- a/app/system/ui_set/admin/templates/css/page_iframe.css
+++ b/app/system/ui_set/admin/templates/css/page_iframe.css
@@ -26,16 +26,15 @@
 	border-radius: 100%;
 }
 .pageeditor-btn .editable-container{display: block;}
-.pageeditor-btn .editable-container .editableform{padding: 10px;border: 1px solid  #ddd;background: #fff;box-shadow: 0 1px 10px rgba(0, 0, 0,.2);}
+.pageeditor-btn .editable-container .editableform{padding: 10px;border: 1px solid  #ddd;background: #fff;box-shadow: 0 1px 10px rgba(0, 0, 0,.2);border-radius: .3rem;}
 .pageeditor-btn .editable-container .editableform .form-group{margin-bottom: 0;}
 .pageeditor-btn .editable-container .editable-input .form-control{padding: 5px !important;}
 .pageeditor-btn .editable-container .editable-input .form-control,.pageeditor-btn .editable-container .editable-input input{min-width: 100px;max-width: 500px;font-size: 14px;}
 .pageeditor-btn .editable-container .editable-input input{height: 2rem;}
 .pageeditor-btn .editable-container .editable-buttons{margin-top: 5px;}
-.pageeditor-btn .editable-container .editable-buttons .btn{padding:2px 5px;}
+.pageeditor-btn .editable-container .editable-buttons .btn{padding:2px 5px;padding:2px 15px;font-size: 16px;}
 .pageeditor-btn .editable-container .editable-buttons .editable-cancel{margin-left: 5px;}
 @media screen and (max-width:1249px){
-	.pageeditor-btn .editable-container .editable-buttons .btn{padding: 2px 15px;font-size: 16px;}
 	.pageeditor-btn .editable-container .editable-input .form-control,.pageeditor-btn .editable-container .editable-input input{min-width: 150px;line-height: 1.5;}
 	.pageeditor-btn .editable-container .editable-input input{height: 2.5rem}
 }
